# company-character

./: README.md
cc-admin/: .cc-admin.yml  pyproject.toml  repo-config.yml
cc-admin/cc_admin/: announce_store.py  audit.py  builder.py  cli.py  config.py  github_client.py  lore_store.py  parser.py  qa_store.py
cc-admin/cc_admin/commands/: alias.py  announce.py  audit_cmd.py  build.py  diff.py  init.py  lore.py  override.py  persona.py  preview.py  publish.py  qa.py  repo.py  scan.py
company-cli/: pyproject.toml
company-cli/babb/: cli.py  responses.py
company-state/: NOW.md  personality.md  response-templates.yml  roadmap.md  section-map.yml
