[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-admin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
    "pyyaml>=6",
    "anthropic>=0.25",
]

[project.scripts]
cc-admin = "cc_admin.cli:app"

[tool.setuptools.packages.find]
where = ["."]
