[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Rename "company-cli" and the entry point below to match your brand
name = "company-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.25",
    "requests>=2.31",
]

[project.scripts]
# Rename this to your brand CLI name, e.g. "heybabb" or "hey-acme"
companycli = "babb.cli:app"

[tool.setuptools.packages.find]
where = ["."]
